exclude role, privilege & other fields users collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ application.version=${project.version}
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
 server.port=8888
-#server.port.http=80
 #server.servlet.context-path=/v1
 #server.tomcat.remote_ip_header=x-forwarded-for
 #server.tomcat.protocol_header=x-forwarded-proto
@@ -23,7 +22,7 @@ server.port=8888
 #mongodb
 spring.data.mongodb.repositories.enabled=true
 #spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true
-spring.data.mongodb.uri=mongodb://pocket:pocket@localhost:27017/pocketdb
+spring.data.mongodb.uri=mongodb:/localhost:27017/pocketdb
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
