--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ application.version=${project.version}
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
 server.port=8888
-#server.servlet.context-path=/v1
+server.servlet.context-path=/v1
 #server.tomcat.remote_ip_header=x-forwarded-for
 #server.tomcat.protocol_header=x-forwarded-proto
 #
@@ -21,7 +21,6 @@ server.port=8888
 # DATA PROPERTIES
 #mongodb
 spring.data.mongodb.repositories.enabled=true
-#spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true
 spring.data.mongodb.uri=mongodb:/localhost:27017/pocketdb
 #
 # OTHER
