--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ application.version=${project.version}
 # WEB PROPERTIES
 #server.address= # Network address to which the server should bind.
 server.port=8888
-server.servlet.context-path=/v1
+#server.servlet.context-path=/v1
 #server.tomcat.remote_ip_header=x-forwarded-for
 #server.tomcat.protocol_header=x-forwarded-proto
 #
