--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,8 @@ server.port=8888
 #mongodb
 spring.data.mongodb.repositories.enabled=true
 #spring.data.mongodb.uri=mongodb://localhost:27017/pocketdb
-spring.data.mongodb.uri=mongodb://pocket:pocket@89.208.196.184:27017/pocketdb
+#spring.data.mongodb.uri=mongodb://pocket:pocket@89.208.196.184:27017/pocketdb
+spring.data.mongodb.uri=mongodb+srv://pocket:pocket@cluster0-vsjrv.mongodb.net/pocketdb?retryWrites=true&w=majority
 #
 # OTHER
 spring.jackson.serialization.indent_output=true
